- ADD: Option to exclude specific paths from showing
       icon overlays. (Stefan)
- ADD: On Win2k and later, the authentication data is now
       encrypted before saved. The encryption is not available
       for the other OS's. (Stefan)
- ADD: When creating branches/tags, you now can choose if
       you want to use the working copy as the source or
       just to a repo->repo copy. (Stefan)
- ADD: If the "check for updates" can't connect to the
       repository, just show the local status. (Stefan)
- ADD: The "Add to ignore list" now has a submenu with
       the filename and the filemask (e.g. "*.tmp")
       as its entries. (Stefan)
- ADD: Show hints about some error messages, e.g. for
       the "out-of-date" error tell the user to 
       update first. (Stefan)
- CHG: The Repository Browser now sorts the date column
       by the real date, not the text. (Stefan)
- BUG: When an URL to a file was entered in the repository
       browser, it was treated as a folder. (Stefan)
- BUG: Right-drag export of more than one folder made the
       additional folders exported inside the previous
       ones. (Stefan)
- BUG: Authentication when viewing remote properties lead
       to a crash. (Stefan)
- BUG: Even if no entries are added to the right-drag context
       menu, the separator still was added. (Stefan)
- BUG: TortoiseMerge could crash when parsing invalid, corrupted
       or unsupported patchfiles. (Stefan)

Version 1.0.8
- CHG: The OK button in the commit dialog is enabled by default,
       the default minimum logsize is now zero. (Stefan)
- BUG: Some IE proxy settings weren't used correctly. This
       lead to TSVN not able to connect to repositories. (Stefan)

Version 1.0.7
- ADD: in the "check for updates" dialog a new
       context menu command to show the log. (Stefan)
- ADD: New option to specify the minimum size of a
       log message. (Stefan)
- ADD: It's possible to turn off the context menu