@@ -247,6 +247,7 @@ BEGIN
     DEFPUSHBUTTON   "&OK",IDOK,129,244,50,14
     PUSHBUTTON      "&Cancel",IDCANCEL,187,244,50,14
     PUSHBUTTON      "&Help",IDHELP,243,244,50,14
+    PUSHBUTTON      "Fill Message",IDC_FILLLOG,243,218,50,14
 END
 
 IDD_MERGE DIALOGEX 0, 0, 345, 210
