@@ -96,6 +96,7 @@
 #define IDC_GETALL                      1031
 #define IDC_EDITCONFIG                  1031
 #define IDC_UPDATE                      1031
+#define IDC_FILLLOG                     1031
 #define IDC_RADIO1                      1032
 #define IDC_REVISION_HEAD               1032
 #define IDC_MENU10                      1032
