@@ -1,3 +1,6 @@
+- ADD: New button in the commit dialog which will 
+       fill the log message box with the status
+       and filename of all selected files. (Stefan)
 - ADD: Option to exclude specific paths from showing
        icon overlays. (Stefan)
 - ADD: On Win2k and later, the authentication data is now
